# R2P2-ESP32

./: .gitignore  .gitmodules  .worktreeinclude  CMakeLists.txt  README.md  Rakefile  partitions.csv  sdkconfig.defaults
.github/: dependabot.yml
.github/workflows/: esp-idf.yml  release.yml
components/btstack/: CMakeLists.txt  btstack_config.h
components/picoruby-esp32/: CMakeLists.txt  picoruby-esp32.c
components/picoruby-esp32/build_config/: riscv-esp-femtoruby.rb  riscv-esp-picoruby.rb  xtensa-esp-femtoruby.rb  xtensa-esp-picoruby.rb
components/picoruby-esp32/mrblib/: main_task.rb
docs/: R2P2-ESP32_Architecture_and_Boot_Sequence.md  README.md  claude-web-chat-prompt.md
main/: CMakeLists.txt  main.c
reference/: R2P2-ESP32_Architecture_and_Boot_Sequence.md  README.md  claude-web-chat-prompt.md
sdkconfigs/: bt_btstack  no_wifi  spiram
storage/home/: dap_debug_sample.rb
